[package]
name = "servo_demo"
version = "0.1.0"
authors = ["Rikard Anglerud <rikard@anglerud.com>"]
description = "STM32F103 Blue Pill boards, with an attached servo."
categories = ["embedded", "no-std"]
edition = "2018"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
embedded-hal = "0.2.7"
nb = "1.0.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }


[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]

[[bin]]
name = "servo_demo"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level = "z"
